# kikuchipy

./: .all-contributorsrc  .codecov.yml  .coveragerc  .coveragerc.bak  .gitignore  .license.tmpl  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  RELEASE.rst  background_dynamic.py  background_get_static_average_interactive.py  background_get_static_average_interactively.py  background_static.py  check_version.py  conftest.py  decompose.py  environment.yml  pyproject.toml  pytest.ini  readthedocs.yaml  readthedocs.yml  setup.cfg  setup.py  test.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  build_and_coverage.yml  make_release_or_not.py  merge_main_into_develop.yml  perhaps_make_tagged_release_draft.py  perhaps_make_tagged_release_draft.yml  publish.yml  release.yml  test_documentation_notebooks.yml  tests.yml  weekly.yml  weekly_tests.yml
benchmarks/indexing/: test_dictionary_indexing.py  test_refinement.py
ci/: travis_install_with_conda.sh  travis_install_with_pip.sh  travis_setup_conda_linux.sh  travis_setup_conda_osx.sh  travis_setup_conda_windows.sh
doc/: Makefile  background_correction.rst  bibliography.bib  bibliography.rst  change_navigation_signal_shapes.ipynb  change_scan_pattern_size.ipynb  change_scan_pattern_size.rst  changelog.rst  cite.rst  code_of_conduct.rst  conf.py  contributing.rst  environment.yml  examples.rst  feature_maps.ipynb  feature_maps.rst  geometrical_ebsd_simulations.ipynb  index.rst  install.rst  installation.rst  kikuchipy_h5ebsd_specification.rst  load_save_data.ipynb  load_save_data.rst  load_save_data.rst.bak  load_save_patterns.rst  metadata.rst  metadata_structure.ipynb  multivariate_analysis.ipynb  multivariate_analysis.rst  open_datasets.rst  pattern_matching.ipynb  pattern_processing.ipynb  pattern_processing.rst  pattern_processing.rst.bak  pattern_processing2.ipynb  reference.rst  reference_frames.ipynb  reference_frames.rst  related_projects.rst  report_handling_manual.rst  (+5 more)
doc/_examples/: README.txt
doc/_static/: color_style.py  custom.css  no_search_highlight.css  style.css
doc/_templates/: custom-class-template.rst  custom-module-template.rst  layout.html
doc/dev/: adding_to_data_module.rst  building_writing_documentation.rst  code_of_conduct.rst  code_style.rst  continuous_integration.rst  handling_deprecations.rst  improving_performance.rst  index.rst  maintaining_package_credits.rst  report_handling_manual.rst  running_writing_tests.rst  setting_up_development_installation.rst  using_git.rst
doc/examples/: index.rst  mandm2021_sunday_short_course.ipynb  save_nice_master_pattern_image.ipynb  save_nice_master_pattern_image_to_file.ipynb
doc/getting_started/: index.rst
doc/reference/: index.rst
doc/release/: release_0.1.rst
doc/source/: background_correction.rst  background_corrections.rst  bibliography.rst  change_scan_pattern_size.rst  cite.rst  conf.py  develop.rst  index.rst  install.rst  load_save_data.rst  load_save_patterns.rst  metadata.rst  open_datasets.rst  reference.rst  virtual_backscatter_electron_imaging.rst  virtual_forward_scatter_detector.rst  visualizing_patterns.rst
doc/tutorials/: change_navigation_signal_shapes.ipynb  feature_maps.ipynb  feature_maps.nblink  geometrical_ebsd_simulations.ipynb  geometrical_ebsd_simulations.nblink  hough_indexing.ipynb  hough_indexing_multiple_phases.ipynb  hybrid_indexing.ipynb.bak  index.rst  kikuchi_pattern_simulations.ipynb  kinematical_ebsd_simulations.ipynb  kinematical_ebsd_simulations.nblink  load_save_data.ipynb  load_save_data.nblink  mandm2021_sunday_short_course.ipynb  mandm2021_sunday_short_course.nblink  metadata_structure.ipynb  multivariate_analysis.ipynb  multivariate_analysis.nblink  pattern_matching.ipynb  pattern_matching.nblink  pattern_matching_fast.ipynb  pattern_processing.ipynb  pattern_processing.nblink  pc_calibration_moving_screen_technique.ipynb  pc_calibration_moving_screen_technique.nblink  pc_extrapolate_plane.ipynb  pc_fit_plane.ipynb  pc_orientation_dependence.ipynb  reference_frames.ipynb  reference_frames.nblink  run_nbval.sh  tutorials_sanitize.cfg  virtual_backscatter_electron_imaging.ipynb  virtual_backscatter_electron_imaging.nblink  visualizing_patterns.ipynb  visualizing_patterns.nblink
doc/user/: applications.rst  bibliography.bib  bibliography.rst  index.rst  installation.rst  open_datasets.rst  related_projects.rst
doc/user_guide/: change_navigation_signal_shapes.ipynb  feature_maps.ipynb  geometrical_ebsd_simulations.ipynb  kikuchi_pattern_simulations.ipynb  load_save_data.ipynb  metadata_structure.ipynb  multivariate_analysis.ipynb  pattern_matching.ipynb  pattern_processing.ipynb  reference_frames.ipynb  virtual_backscatter_electron_imaging.ipynb  visualizing_patterns.ipynb
examples/: README.rst  README.txt
examples/pattern_processing/: README.rst  adaptive_histogram_equalization.py  dynamic_background_correction.py  neighbour_pattern_averaging.py  pattern_binning.py  static_background_correction.py
examples/reference_frames/: README.rst  convert_between_detector_coordinates.py  crop_detector.py  ebsd_detector_plotter.py  estimate_tilt_about_detector_xaxis.py  estimate_tilts_about_detector_xaxis_zaxis.py  fit_plane_to_selected_pc.py  (+6 more)
kikuchipy/: __init__.py  conftest.py  hyperspy_extension.yaml  io.py  lazy_signals.py  release.py  signals.py  version.py
scripts/: background_get_dynamic_interactive.py  background_get_static_average_interactive.py  background_static_and_dynamic.py  create_model_signal.py  decompose.py
signals/: electron_backscatter_diffraction.py  radon_transform.py
tests/: conftest.py
tutorials/: README.rst  feature_maps.ipynb  geometrical_ebsd_simulations.ipynb  index.rst  pattern_matching.ipynb  pattern_processing.ipynb  pc_calibration_moving_screen_technique.ipynb  reference_frames.ipynb  visualizing_patterns.ipynb
(+625 files in other folders)
