[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ----------------------------- Project ------------------------------ #

[project]
name = "kikuchipy"
authors = [{name = "kikuchipy developers"}]
maintainers = [{name = "Håkon Wiik Ånes", email = "hwaanes@gmail.com"}]
description = "Processing, simulating, and indexing of electron backscatter diffraction (EBSD) patterns"
license = {file = "LICENSE"}
readme = {file = "README.rst", content-type = "text/x-rst"}
dynamic = ["version"]
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords=[
    "EBSD",
    "electron backscatter diffraction",
    "EBSP",
    "electron backscatter pattern",
    "BKD",
    "backscatter kikuchi diffraction",
    "SEM",
    "scanning electron microscopy",
    "kikuchi pattern",
    "dictionary indexing",
]
dependencies = [
    "dask[array]      >= 2021.8.1",
    "diffpy.structure >= 3",
    "diffsims         >= 0.5.2",
    "hyperspy         >= 2.2",
    "h5py             >= 2.10",
    "imageio",
    "lazy_loader",
    "matplotlib       >= 3.5",
    "numba            >= 0.57",
    "numpy            >= 1.23.0",
    "orix             >= 0.12.1",
    "pooch            >= 1.3.0",
    "pyyaml",
    "rosettasciio     >= 0.3.0",
    "scikit-image     >= 0.16.2",
    "scikit-learn",
    "scipy            >= 1.7",
    "tqdm             >= 0.5.2",
]

[project.optional-dependencies]
all = [
    "nlopt",
    "pyebsdindex                  >= 0.2, != 0.3.1",
    "pyvista",
]
doc = [
    "memory_profiler",
    "nbsphinx                     >= 0.7",
    "numpydoc",
    "nlopt",
    "pydata-sphinx-theme",
    "pyebsdindex                  ~= 0.2",
    "pyvista",
    "sphinx                       >= 3.0.2",
    "sphinx-codeautolink[ipython] <  0.14",
    "sphinx-copybutton            >= 0.2.5",
    "sphinx-design",
    "sphinx-gallery",
    "sphinxcontrib-bibtex         >= 1.0",
]
tests = [
    "numpydoc",
    "pytest                       >= 5.4",
    "pytest-benchmark",
    "pytest-rerunfailures",
    "pytest-xdist",
]
coverage = [
    "coverage                     >= 5.0",
    "pytest-cov                   >= 2.8.1",
]
dev = [
    "black[jupyter]               >= 23.1",
    "hatch",
    "isort",
    "outdated",
    "pre-commit                   >= 1.16",
    "kikuchipy[doc,tests,coverage]",
]

[project.entry-points."hyperspy.extensions"]
kikuchipy = "kikuchipy"

[project.urls]
Documentation = "https://kikuchipy.org"
Download = "https://pypi.python.org/pypi/kikuchipy"
"Bug Tracker" = "https://github.com/pyxem/kikuchipy/issues"
"Source Code" = "https://github.com/pyxem/kikuchipy"
Changelog = "https://kikuchipy.org/en/stable/changelog.html"

# ------------------------------- Tool ------------------------------- #

[tool.hatch.version]
path = "src/kikuchipy/__init__.py"

# https://github.com/pypa/hatch/discussions/427
# https://github.com/pypa/hatch/issues/492
[tool.hatch.build.targets.wheel.sources]
src = ""

[tool.hatch.build.targets.wheel]
include = ["src/kikuchipy"]

[tool.hatch.build.targets.wheel.force-include]
"tests/" = "kikuchipy/tests"
"conftest.py" = "kikuchipy/conftest.py"

[tool.coverage.report]
precision = 2

[tool.coverage.run]
branch = false
source = ["src/kikuchipy"]
relative_files = true

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--import-mode=importlib",
    # Skip benchmarks, enable with --benchmark-enable or --benchmark-only
    # https://pytest-benchmark.readthedocs.io/en/stable/usage.html#commandline-options
    "--benchmark-skip",
    # Documentation scripts
    "--ignore=doc/_static/image/doc_reference_frames.py",
    # Examples
    "--ignore=examples/*/*.py",
    # Scripts for creating dummy data
    "--ignore=src/kikuchipy/data/emsoft_ebsd/create_dummy_emsoft_ebsd_file.py",
    "--ignore=src/kikuchipy/data/oxford_h5ebsd/create_oxford_h5ebsd_file.py",
    "--ignore=src/kikuchipy/data/oxford_binary/create_oxford_binary_file.py",
    "--ignore-glob=src/kikuchipy/data/emsoft_ebsd_master_pattern/*.py",
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
filterwarnings = [
    # Setuptools
    "ignore:Deprecated call to `pkg_resources:DeprecationWarning",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
    # Traits
    "ignore:module \\'sre_:DeprecationWarning",
    # tqdm: 'tqdm_notebook' object has no attribute 'disp'
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # From pytools
    "ignore:Unable to import recommended hash 'siphash24.siphash13'",
]

[tool.isort]
profile = "black"
filter_files = true
force_sort_within_sections = true
